Adding natural languge processing using Microsoft LUIS AI cogntive api

--- a/CustomerService/CustomerService/CustomerService.csproj
+++ b/CustomerService/CustomerService/CustomerService.csproj
@@ -152,6 +152,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\GreetingDialog.cs" />
+    <Compile Include="Dialogs\LUISDialog.cs" />
     <Compile Include="Dialogs\MainDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Global.asax.cs">
